--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.mjs",
+    "start": "npm i && node index.mjs",
     "test": "echo \"TODO : add test \" && exit 0",
     "lint": "eslint .",
     "format": "prettier --single-quote --check .",
