--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dev": "nodemon --experimental-modules index.mjs"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-oauth2-jwt-bearer": "^1.3.0",
     "mongodb": "^4.13.0"
   },
   "devDependencies": {
